tdf#148952 sw: DOCX export: ECMA-376 1st ed does not allow title

... attribute, so fallback to merge the value with the description
into the descr attribute.

Change-Id: I4e83a67788d0c82dd762c075f06db358a7884675
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146444
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>